--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = { version = "0.14", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
-hyper-staticfile = { version = "0.6.0" }
+http = {path = "../http"}
+serde = {version = "1.0.117", features = ["derive"]}
+serde_json = "1.0.59"
